--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10.13"
 dependencies = [
     "faiss-cpu>=1.12.0",
+    "ipykernel>=6.30.1",
     "langchain-community>=0.3.27",
     "langchain-core>=0.3.74",
     "langchain-openai>=0.3.30",
