--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,6 @@ dependencies = [
     "pymupdf>=1.26.3",
     "python-dotenv>=1.1.1",
     "pytz>=2025.2",
+    "streamlit>=1.39.0",
+    "pytest>=8.0.0",
 ]
