--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,6 @@ dependencies = [
     "pytz>=2025.2",
     "streamlit>=1.39.0",
     "pytest>=8.0.0",
+    "ragas>=0.3.2",
+    "datasets>=4.0.0",
 ]
